--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: #f3e9f1;
+}
 
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+/* -----SECTION TITRE -----*/
+#first_section {
+  position: relative;
+}
+#first_section figure {
+  width: 100vw;
+  margin: 0;
+}
+#first_section figure img {
+  max-width: 100%;
+  height: auto;
+}
+#first_section h1 {
+  position: absolute;
+  top: 100px;
+  left: 550px;
+  font-size: 70px;
+}
+#first_section h1 span {
+  position: absolute;
+  font-size: 15px;
+  left: 230px;
+}
+#first_section h2 {
+  position: absolute;
+  top: 300px;
+  left: 400px;
+}
+
+/*----- SECTION PREMIER OURSON -----*/
+#catalogue {
+  width: 100vw;
+}
+#catalogue #premier_ourson {
+  margin: 20px;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid grey;
+}
+#catalogue #premier_ourson figure {
+  margin: 0;
+  width: 40%;
+}
+#catalogue #premier_ourson figure img {
+  width: 100%;
+  height: auto;
+}
+
+header .petit_bandeau {
+  background-color: #f3e9f1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50px;
+}
+header .petit_bandeau figure {
+  width: 150px;
+  margin: auto 0;
+}
+header .petit_bandeau figure img {
+  max-width: 100%;
+  height: auto;
+}
+header .petit_bandeau div {
+  margin: auto 20px 20px 0;
+  position: relative;
+}
+header .petit_bandeau div form {
+  margin: auto 0;
+}
+header .petit_bandeau div a {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+}
 
 /*# sourceMappingURL=style.css.map */
