--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,9 +7,5 @@ body{
     padding: 0;
     overflow-x: hidden;
     background-color: $fond_bandeau;
-}
-
-a{
-    text-decoration: none;
-    color: grey;
+    font-family: 'Roboto', sans-serif;
 }
