--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -17,6 +17,7 @@
         top: 100px;
         left: 550px;
         font-size: 70px;
+        font-family: 'Miltonian Tattoo', cursive;
         & span{
             position: absolute;
             font-size: 15px;
@@ -31,18 +32,20 @@
     }
 }
 
-/*----- SECTION PREMIER OURSON -----*/
+/*----- SECTION OURSON -----*/
 
 #catalogue{
     width: 100vw;
 
-    & #premier_ourson{
-        margin: 20px;
+    & #ourson{
+        margin: 20px auto;
         width: 90%;
+        
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         border: 1px solid grey ;
+        box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
 
         & figure{
             margin: 0;
@@ -52,6 +55,36 @@
                 width: 100%;
                 height: auto;
             }
+        }
+        & #description_ourson{
+            width: 40%;
+            padding-left: 10px;
+            & p{
+
+                & span{
+                    font-weight: bold;
+                }
+                & a{
+                    text-decoration: none;
+                    color: black;
+                    transform: scale(1);
+                    text-decoration: underline transparent;
+                    transition: text-decoration 400ms;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+        & #tarifs{
+            width: 20%;
+            display: flex;
+            color: $vert;
+            font-weight: bold;
+            font-size: 40px;
+            flex-direction: column;
+            justify-content: space-around;
+            text-align: center;
         }
     }
 }
