--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,1 +1,5 @@
 $fond_bandeau: rgb(243,233,241);
+$blanc: rgb(255,255,255);
+$blanc_creme: rgb(233,232,230);
+$beige:rgb(202,177,146);
+$vert: green;
