--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ body {
   padding: 0;
   overflow-x: hidden;
   background-color: #f3e9f1;
+  font-family: "Roboto", sans-serif;
 }
 
-a {
-  text-decoration: none;
-  color: grey;
+button {
+  cursor: pointer;
+  background-color: green;
+  color: white;
+  border-radius: 3em;
 }
 
 /* -----SECTION TITRE -----*/
@@ -29,6 +32,7 @@ a {
   top: 100px;
   left: 550px;
   font-size: 70px;
+  font-family: "Miltonian Tattoo", cursive;
 }
 #first_section h1 span {
   position: absolute;
@@ -41,25 +45,53 @@ a {
   left: 400px;
 }
 
-/*----- SECTION PREMIER OURSON -----*/
+/*----- SECTION OURSON -----*/
 #catalogue {
   width: 100vw;
 }
-#catalogue #premier_ourson {
-  margin: 20px;
+#catalogue #ourson {
+  margin: 20px auto;
   width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border: 1px solid grey;
+  box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
 }
-#catalogue #premier_ourson figure {
+#catalogue #ourson figure {
   margin: 0;
   width: 40%;
 }
-#catalogue #premier_ourson figure img {
+#catalogue #ourson figure img {
   width: 100%;
   height: auto;
+}
+#catalogue #ourson #description_ourson {
+  width: 40%;
+  padding-left: 10px;
+}
+#catalogue #ourson #description_ourson p span {
+  font-weight: bold;
+}
+#catalogue #ourson #description_ourson p a {
+  text-decoration: none;
+  color: black;
+  transform: scale(1);
+  text-decoration: underline transparent;
+  transition: text-decoration 400ms;
+}
+#catalogue #ourson #description_ourson p a:hover {
+  text-decoration: underline;
+}
+#catalogue #ourson #tarifs {
+  width: 20%;
+  display: flex;
+  color: green;
+  font-weight: bold;
+  font-size: 40px;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
 }
 
 header .petit_bandeau {
@@ -77,17 +109,30 @@ header .petit_bandeau figure img {
   max-width: 100%;
   height: auto;
 }
-header .petit_bandeau div {
-  margin: auto 20px 20px 0;
-  position: relative;
+header .petit_bandeau nav {
+  margin: auto 30px auto 0;
 }
-header .petit_bandeau div form {
-  margin: auto 0;
+header .petit_bandeau nav ul {
+  margin: auto;
+  display: flex;
+  list-style: none;
 }
-header .petit_bandeau div a {
-  cursor: pointer;
-  position: absolute;
-  right: 10px;
+header .petit_bandeau nav ul li {
+  transform: scale(1);
+  transition: transform 400ms;
+}
+header .petit_bandeau nav ul li:hover {
+  transform: scale(1.2);
+}
+header .petit_bandeau nav ul li a {
+  text-decoration: none;
+  color: black;
+}
+header .petit_bandeau nav ul li:nth-child(1) {
+  padding-right: 15px;
+}
+header .petit_bandeau nav ul li:nth-child(3) {
+  padding-left: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
