--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ button {
   background-color: green;
   color: white;
   border-radius: 3em;
+  transform: scale(1);
+  transition: transform 400ms;
+}
+button:hover {
+  transform: scale(1.2);
 }
 
 /* -----SECTION TITRE -----*/
