correction des erreurs

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,7 +16,7 @@
         & ul{
             list-style: none;
             @include mobile{
-                margin-bottom: 10px0;
+                margin-bottom: 10px;
                 padding: 0;
             }
             
