--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -62,6 +62,7 @@
         @include mobile{
             font-size: 10px;
             top: 70px;
+            left: 40px;
         }
     }
 }
@@ -78,6 +79,7 @@
         flex-direction: row;
         justify-content: space-between;
         border: 1px solid grey ;
+        border-radius: 4px;
         box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
 
         @include petite-tablette{
@@ -94,6 +96,7 @@
             & img{
                 width: 100%;
                 height: auto;
+                border-radius: 4px;
                 box-sizing: border-box;
             }
         }
@@ -129,6 +132,9 @@
                         text-decoration: underline;
                     }
                 }
+            }
+            & p:nth-child(6){
+                text-align: justify;
             }
         }
         & .tarifs{
