--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ button:hover {
   #first_section h2 {
     font-size: 10px;
     top: 70px;
+    left: 40px;
   }
 }
 
@@ -115,6 +116,7 @@ button:hover {
   flex-direction: row;
   justify-content: space-between;
   border: 1px solid grey;
+  border-radius: 4px;
   box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
   /*&--1{
 
@@ -153,6 +155,7 @@ button:hover {
 #catalogue .PartieOurson figure img {
   width: 100%;
   height: auto;
+  border-radius: 4px;
   box-sizing: border-box;
 }
 #catalogue .PartieOurson .description_ourson {
@@ -189,6 +192,9 @@ button:hover {
 }
 #catalogue .PartieOurson .description_ourson p a:hover {
   text-decoration: underline;
+}
+#catalogue .PartieOurson .description_ourson p:nth-child(6) {
+  text-align: justify;
 }
 #catalogue .PartieOurson .tarifs {
   width: 20%;
