modifs des pages supplémentaires css et queries

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,7 @@ body{
     overflow-x: hidden;
     background-color: $fond_bandeau;
     font-family: 'Roboto', sans-serif;
+    position: relative;
     @include grande-tablette{
         margin: auto;
         width: 100vw;
