--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -69,9 +69,9 @@
 
 /*----- SECTION OURSON -----*/
 
-#catalogue{
+#catalogue, .partie__ourson{
     width: 100vw;
-
+    
     & .PartieOurson{
         width: 90%;
         display: flex;
@@ -80,6 +80,28 @@
         border: 1px solid grey ;
         border-radius: 4px;
         box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
+        &--1{
+            margin: 20px auto;
+        }
+        &--2{
+            margin: 20px auto;
+        }
+        &--3{
+            margin: 20px auto;
+        }
+        &--4{
+            margin: 20px auto;
+        }
+        &--touronchon{
+            margin: 100px auto auto auto;
+
+            @include grande-tablette{
+                margin-top: 400px;
+            }
+            @include petite-tablette{
+                margin: 20px auto 20px auto;
+            }
+        }
 
         @include petite-tablette{
             flex-direction: column;
@@ -133,7 +155,11 @@
                 }
             }
             & p:nth-child(6){
+                padding: 0;
                 text-align: justify;
+                @include petite-tablette{
+                    padding: 0 5px 0 5px;
+                }
             }
         }
         & .tarifs{
@@ -159,4 +185,14 @@
             
         }
     }
+}
+/*-----Page Touronchon-----*/
+
+.select__color{
+
+    & select{
+
+        margin: 0 10px;
+    }
+    
 }
