--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   overflow-x: hidden;
   background-color: #f3e9f1;
   font-family: "Roboto", sans-serif;
+  position: relative;
 }
 @media all and (max-width: 1024px) {
   body {
@@ -14,7 +15,7 @@ body {
   }
 }
 
-button {
+.button__panier {
   cursor: pointer;
   background-color: green;
   color: white;
@@ -22,7 +23,7 @@ button {
   transform: scale(1);
   transition: transform 400ms;
 }
-button:hover {
+.button__panier:hover {
   transform: scale(1.2);
 }
 
@@ -106,11 +107,10 @@ button:hover {
 }
 
 /*----- SECTION OURSON -----*/
-#catalogue {
+#catalogue, .partie__ourson {
   width: 100vw;
 }
-#catalogue .PartieOurson {
-  margin: 20px auto;
+#catalogue .PartieOurson, .partie__ourson .PartieOurson {
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -118,57 +118,63 @@ button:hover {
   border: 1px solid grey;
   border-radius: 4px;
   box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
-  /*&--1{
-
-      & figure{
-          background-color: $blanc;
-      }
-
+}
+#catalogue .PartieOurson--1, .partie__ourson .PartieOurson--1 {
+  margin: 20px auto;
+}
+#catalogue .PartieOurson--2, .partie__ourson .PartieOurson--2 {
+  margin: 20px auto;
+}
+#catalogue .PartieOurson--3, .partie__ourson .PartieOurson--3 {
+  margin: 20px auto;
+}
+#catalogue .PartieOurson--4, .partie__ourson .PartieOurson--4 {
+  margin: 20px auto;
+}
+#catalogue .PartieOurson--touronchon, .partie__ourson .PartieOurson--touronchon {
+  margin: 100px auto auto auto;
+}
+@media all and (max-width: 1024px) {
+  #catalogue .PartieOurson--touronchon, .partie__ourson .PartieOurson--touronchon {
+    margin-top: 400px;
   }
-  &--2{
-
-      & figure{
-          background-color: $blanc_creme;
-      }
-  }
-  &--3{
-
-      & figure{
-          background-color: $blanc_3;
-      }
-  }*/
 }
 @media all and (max-width: 800px) {
-  #catalogue .PartieOurson {
+  #catalogue .PartieOurson--touronchon, .partie__ourson .PartieOurson--touronchon {
+    margin: 20px auto 20px auto;
+  }
+}
+@media all and (max-width: 800px) {
+  #catalogue .PartieOurson, .partie__ourson .PartieOurson {
     flex-direction: column;
   }
 }
-#catalogue .PartieOurson figure {
+#catalogue .PartieOurson figure, .partie__ourson .PartieOurson figure {
   margin: 0;
   width: 40%;
 }
 @media all and (max-width: 800px) {
-  #catalogue .PartieOurson figure {
+  #catalogue .PartieOurson figure, .partie__ourson .PartieOurson figure {
     width: 100%;
   }
 }
-#catalogue .PartieOurson figure img {
+#catalogue .PartieOurson figure img, .partie__ourson .PartieOurson figure img {
   width: 100%;
   height: auto;
   border-radius: 4px;
   box-sizing: border-box;
 }
-#catalogue .PartieOurson .description_ourson {
+#catalogue .PartieOurson .description_ourson, .partie__ourson .PartieOurson .description_ourson {
   width: 40%;
   padding-left: 10px;
 }
 @media all and (max-width: 1024px) {
-  #catalogue .PartieOurson .description_ourson {
+  #catalogue .PartieOurson .description_ourson, .partie__ourson .PartieOurson .description_ourson {
     font-size: 0.75em;
   }
 }
 @media all and (max-width: 800px) {
-  #catalogue .PartieOurson .description_ourson {
+  #catalogue .PartieOurson .description_ourson, .partie__ourson .PartieOurson .description_ourson {
     width: 100%;
     padding-left: 0;
     font-size: 1em;
@@ -176,27 +182,33 @@ button:hover {
   }
 }
 @media all and (max-width: 640px) {
-  #catalogue .PartieOurson .description_ourson p {
+  #catalogue .PartieOurson .description_ourson p, .partie__ourson .PartieOurson .description_ourson p {
     padding: 0 10px 0 10px;
   }
 }
-#catalogue .PartieOurson .description_ourson p span {
+#catalogue .PartieOurson .description_ourson p span, .partie__ourson .PartieOurson .description_ourson p span {
   font-weight: bold;
 }
-#catalogue .PartieOurson .description_ourson p a {
+#catalogue .PartieOurson .description_ourson p a, .partie__ourson .PartieOurson .description_ourson p a {
   text-decoration: none;
   color: black;
   transform: scale(1);
   text-decoration: underline transparent;
   transition: text-decoration 400ms;
 }
-#catalogue .PartieOurson .description_ourson p a:hover {
+#catalogue .PartieOurson .description_ourson p a:hover, .partie__ourson .PartieOurson .description_ourson p a:hover {
   text-decoration: underline;
 }
-#catalogue .PartieOurson .description_ourson p:nth-child(6) {
+#catalogue .PartieOurson .description_ourson p:nth-child(6), .partie__ourson .PartieOurson .description_ourson p:nth-child(6) {
+  padding: 0;
   text-align: justify;
 }
-#catalogue .PartieOurson .tarifs {
+@media all and (max-width: 800px) {
+  #catalogue .PartieOurson .description_ourson p:nth-child(6), .partie__ourson .PartieOurson .description_ourson p:nth-child(6) {
+    padding: 0 5px 0 5px;
+  }
+}
+#catalogue .PartieOurson .tarifs, .partie__ourson .PartieOurson .tarifs {
   width: 20%;
   display: flex;
   color: green;
@@ -207,44 +219,61 @@ button:hover {
   text-align: center;
 }
 @media all and (max-width: 800px) {
-  #catalogue .PartieOurson .tarifs {
+  #catalogue .PartieOurson .tarifs, .partie__ourson .PartieOurson .tarifs {
     width: 100%;
     flex-direction: row;
   }
 }
 @media all and (max-width: 800px) {
-  #catalogue .PartieOurson .tarifs .ajout_panier {
+  #catalogue .PartieOurson .tarifs .ajout_panier, .partie__ourson .PartieOurson .tarifs .ajout_panier {
     margin: auto 0;
   }
 }
 
-#footer {
+/*-----Page Touronchon-----*/
+.select__color select {
+  margin: 0 10px;
+}
+
+#footer, .footer_catalogue {
   background-color: grey;
   color: white;
   display: flex;
   justify-content: space-around;
 }
-#footer div h4 {
+#footer div h4, .footer_catalogue div h4 {
   text-align: center;
 }
-#footer div ul {
+#footer div ul, .footer_catalogue div ul {
   list-style: none;
 }
 @media all and (max-width: 640px) {
-  #footer div ul {
+  #footer div ul, .footer_catalogue div ul {
     margin-bottom: 10px;
     padding: 0;
   }
 }
-#footer div ul li a {
+#footer div ul li a, .footer_catalogue div ul li a {
   color: white;
   text-decoration: none;
   font-size: 0.9em;
 }
 @media all and (max-width: 640px) {
-  #footer div ul li a {
+  #footer div ul li a, .footer_catalogue div ul li a {
     text-align: center;
     font-size: 0.7em;
+  }
+}
+
+.footer_catalogue--touronchon {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+@media all and (max-width: 800px) {
+  .footer_catalogue--touronchon {
+    position: relative;
   }
 }
 
@@ -293,6 +322,9 @@ header .petit_bandeau nav ul li:nth-child(1) {
   padding-right: 15px;
 }
 header .petit_bandeau nav ul li:nth-child(3) {
+  padding-left: 15px;
+}
+header .petit_bandeau nav ul li:last-child {
   padding-left: 15px;
 }
 @media all and (max-width: 640px) {
