--- a/style.css
+++ b/style.css
@@ -47,25 +47,19 @@ body {
 #first_section h1 {
   position: absolute;
   top: 100px;
-  left: 550px;
+  left: 50%;
+  transform: translate(-50%);
   font-size: 70px;
   font-family: "Miltonian Tattoo", cursive;
 }
 @media all and (max-width: 1024px) {
   #first_section h1 {
     top: 0;
-    left: 320px;
-  }
-}
-@media all and (max-width: 800px) {
-  #first_section h1 {
-    left: 200px;
   }
 }
 @media all and (max-width: 640px) {
   #first_section h1 {
     font-size: 30px;
-    left: 100px;
   }
 }
 #first_section h1 span {
@@ -82,34 +76,31 @@ body {
   }
 }
 #first_section h2 {
+  font-size: 22px;
   position: absolute;
   top: 300px;
-  left: 400px;
+  left: 50%;
+  transform: translate(-50%);
+  text-align: center;
 }
 @media all and (max-width: 1024px) {
   #first_section h2 {
     top: 200px;
-    left: 160px;
   }
 }
 @media all and (max-width: 800px) {
   #first_section h2 {
     top: 150px;
-    left: 30px;
   }
 }
 @media all and (max-width: 640px) {
   #first_section h2 {
     font-size: 10px;
     top: 70px;
-    left: 40px;
   }
 }
 
 /*----- SECTION OURSON -----*/
-#catalogue, .partie__ourson {
-  width: 100vw;
-}
 #catalogue .PartieOurson, .partie__ourson .PartieOurson {
   width: 90%;
   display: flex;
