modifs pour retravailler le js

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,6 @@
 @import "../utils/variables";
 
-.button__panier{
+.button__personnalisation{
     cursor: pointer;
     background-color: $vert;
     color: $blanc;
