--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -94,9 +94,9 @@
 
             & img{
                 width: 100%;
-                height: auto;
-                border-radius: 4px;
-                box-sizing: border-box;
+                height: 100%;
+                border-radius: 4px 0 0 4px;
+                
             }
         }
         & .description_ourson{
@@ -156,6 +156,21 @@
             }
             & .ajout_panier{
                 
+                & p{
+                    transform: scale(1);
+                    transition: transform 400ms;
+                    &:hover{
+                        transform: scale(1.2);
+                    }
+
+                }
+
+                & a{
+                    text-decoration: none;
+                    color: $vert;
+                    font-size: .4em;
+                    
+                }
                 @include petite-tablette{
                     margin: auto 0;
                 }
