mise en page de la page produit

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -11,3 +11,20 @@
         transform: scale(1.2);
     }
 }
+
+.boutonPanier{
+    margin: auto 0;
+    cursor: pointer;
+    background-color: $vert;
+    color: $blanc;
+    height: 40px;
+    transform: scaleZ(1);
+    transition: transform 400ms, color 400ms, background-color 400ms;
+    &:hover{
+        color: $vert;
+        background-color: $blanc;
+    }
+    &:focus{
+        transform: scaleZ(.7);
+    }
+}
