--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $blanc_creme: rgb(233,232,230);
 $blanc_3: rgb(255,252,247);
 $beige: rgb(202,177,146);
 $vert: green;
+$rouge: red;
 
 $breakpoints: (
     grande-tablette: 1024px,
