--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -28,3 +28,34 @@
         transform: scaleZ(.7);
     }
 }
+#divDelete{
+    text-align: center;
+    
+        & #deleteButton{
+            cursor: pointer;
+            margin-top: 20px;
+            background-color: $fond-bandeau;
+            color: $rouge;
+            height: 40px;
+            width: 300px;
+            transition : color 400ms, background-color 400ms;
+            &:hover{
+                color: $fond_bandeau;
+                background-color: $rouge;
+            }
+        }
+}
+
+#confirm_order{
+    cursor: pointer;
+    margin: 30px 0;
+    width: 300px;
+    height: 40px;
+    color: $vert;
+    background-color: $fond_bandeau;
+    transition: color 400ms, background-color 400ms;
+    &:hover{
+        color: $fond_bandeau;
+        background-color: $vert;
+    }
+}   
